apps/predict/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: predict
  namespace: hailcast
  labels:
    app: predict
spec:
  selector:
    app: predict
  ports:
    - name: http
      port: 8003
      targetPort: http
